Implemented Update collection and Plugin Endpoints (#14)
* Integrated with NFT Factory smart contract

* Integrated with NFT Factory smart contract

* Created endpoints to generate and get Plugin API keys

* Created endpoints to generate and get Plugin API keys

* Created endpoints to generate and get Plugin API keys

* Created endpoints to get collections

* Created endpoints to get collections

* WIP

* Implemented GetInfo endpoint

* sync with dev branch

* Implemented Update collection
Implemented Host WL
