# src/routes/collection.ts
@@ -1,6 +1,7 @@
 import express from 'express';
 import * as controller from '../controllers/collection.controller';
 import { createCollectionValidator } from '../middlewares/create.collection.validator';
+import { updateCollectionValidator } from '../middlewares/update.collection.validator';
 
 const router = express.Router({ mergeParams: true });
 
@@ -11,8 +12,6 @@ router.get('/', controller.handleGetCollections);
 
 router.get('/:collection_id', controller.handleGetCollectionById);
 
-// NOT needed ATM
-// router.get('/:collection_id/items', controller.handleGetCollectionItems);
-
+router.put('/:collection_id', updateCollectionValidator, controller.handleUpdateCollection);
 
 export default router;
